--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^5.0.8"
-  }
+  },
+  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-24ddc0f5d75046c5622901739e7c5dd533143b0c8e959d652212380cedb1ea36.svg)](https://classroom.github.com/a/5y3q7FHA) # Using State Assignment 2",
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC"
 }
